<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/post_type"
            android:textStyle="bold"
            android:gravity="center_vertical"/>

        <RadioGroup
            android:id="@+id/selection_type"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:layout_marginStart="10dp">
            <RadioButton
                android:id="@+id/Lost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/lost"/>
            <RadioButton
                android:id="@+id/Found"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/found"/>

        </RadioGroup>
    </LinearLayout>


    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_item"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:hint="@string/name"
        android:inputType="text" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_item"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:hint="@string/description"
        android:inputType="text" />

    <EditText
        android:id="@+id/etDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_item"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:hint="@string/date"
        android:inputType="text" />

    <EditText
        android:id="@+id/etLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_item"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:hint="@string/location"
        android:inputType="text" />

    <Button
        android:id="@+id/btnGetLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/get_current_location"/>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/save" />

</LinearLayout>